CLI: Add debugPort to DevModeLauncher