@@ -1,119 +1,158 @@
-/*
- * Copyright 2019 Red Hat, Inc.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
 package io.quarkus.gradle.tasks;
 
+import java.io.BufferedWriter;
 import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
-import java.net.InetAddress;
-import java.net.MalformedURLException;
-import java.net.Socket;
-import java.net.URI;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
+import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
+import java.util.LinkedList;
 import java.util.List;
-import java.util.jar.Attributes;
-import java.util.jar.Manifest;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipOutputStream;
+import java.util.Map;
+import java.util.Properties;
+import java.util.Set;
 
+import javax.inject.Inject;
+
+import org.apache.tools.ant.types.Commandline;
 import org.gradle.api.GradleException;
+import org.gradle.api.Project;
+import org.gradle.api.artifacts.Configuration;
+import org.gradle.api.artifacts.ProjectDependency;
+import org.gradle.api.artifacts.ResolvedArtifact;
+import org.gradle.api.artifacts.ResolvedDependency;
+import org.gradle.api.plugins.JavaPlugin;
+import org.gradle.api.plugins.JavaPluginConvention;
+import org.gradle.api.plugins.JavaPluginExtension;
+import org.gradle.api.provider.Provider;
+import org.gradle.api.tasks.Input;
+import org.gradle.api.tasks.InputDirectory;
 import org.gradle.api.tasks.Optional;
+import org.gradle.api.tasks.SourceSet;
+import org.gradle.api.tasks.SourceSetContainer;
 import org.gradle.api.tasks.TaskAction;
+import org.gradle.api.tasks.compile.JavaCompile;
 import org.gradle.api.tasks.options.Option;
+import org.gradle.jvm.toolchain.JavaLauncher;
+import org.gradle.jvm.toolchain.JavaToolchainService;
+import org.gradle.jvm.toolchain.JavaToolchainSpec;
+import org.gradle.util.GradleVersion;
 
-import io.quarkus.dev.ClassLoaderCompiler;
-import io.quarkus.dev.DevModeMain;
-import io.quarkus.gradle.QuarkusPluginExtension;
+import io.quarkus.bootstrap.BootstrapConstants;
+import io.quarkus.bootstrap.model.AppArtifact;
+import io.quarkus.bootstrap.model.AppArtifactKey;
+import io.quarkus.bootstrap.model.AppDependency;
+import io.quarkus.bootstrap.model.AppModel;
+import io.quarkus.bootstrap.model.PathsCollection;
+import io.quarkus.bootstrap.resolver.AppModelResolver;
+import io.quarkus.bootstrap.resolver.AppModelResolverException;
+import io.quarkus.deployment.dev.DevModeContext;
+import io.quarkus.deployment.dev.QuarkusDevModeLauncher;
+import io.quarkus.gradle.QuarkusPlugin;
+import io.quarkus.runtime.LaunchMode;
 
-/**
- * @author <a href="mailto:stalep@gmail.com">Ståle Pedersen</a>
- */
 public class QuarkusDev extends QuarkusTask {
 
-    private String debug;
+    public static final String IO_QUARKUS_DEVMODE_ARGS = "io.quarkus.devmode-args";
+    private Set<File> filesIncludedInClasspath = new HashSet<>();
 
-    private String buildDir;
+    private File buildDir;
 
     private String sourceDir;
 
-    private String jvmArgs;
+    private String workingDir;
+
+    private List<String> jvmArgs;
 
     private boolean preventnoverify = false;
 
-    private static final String RESOURCES_PROP = "quarkus.undertow.resources";
+    private List<String> args = new LinkedList<String>();
 
+    private List<String> compilerArgs = new LinkedList<>();
+
+    @Inject
     public QuarkusDev() {
-        super("Creates a native image");
+        super("Development mode: enables hot deployment with background compilation");
     }
 
-    public String getDebug() {
-        return debug;
+    public QuarkusDev(String name) {
+        super(name);
     }
 
-    @Option(description = "If this server should be started in debug mode. " +
-            "The default is to start in debug mode without suspending and listen on port 5005." +
-            " It supports the following options:\n" +
-            " \"false\" - The JVM is not started in debug mode\n" +
-            " \"true\" - The JVM is started in debug mode and suspends until a debugger is attached to port 5005\n" +
-            " \"client\" - The JVM is started in client mode, and attempts to connect to localhost:5005\n" +
-            "\"{port}\" - The JVM is started in debug mode and suspends until a debugger is attached to {port}", option = "debug")
+    @InputDirectory
     @Optional
-    public void setDebug(String debug) {
-        this.debug = debug;
-    }
-
     public File getBuildDir() {
-        if (buildDir == null)
-            return extension().buildDir();
-        else
-            return new File(buildDir);
+        if (buildDir == null) {
+            buildDir = getProject().getBuildDir();
+        }
+        return buildDir;
     }
 
-    @Option(description = "Set build directory", option = "build-dir")
-    @Optional
-    public void setBuildDir(String buildDir) {
+    public void setBuildDir(File buildDir) {
         this.buildDir = buildDir;
     }
 
+    @Optional
+    @InputDirectory
     public File getSourceDir() {
-        if (sourceDir == null)
+        if (sourceDir == null) {
             return extension().sourceDir();
-        else
+        } else {
             return new File(sourceDir);
+        }
     }
 
     @Option(description = "Set source directory", option = "source-dir")
-    @Optional
     public void setSourceDir(String sourceDir) {
         this.sourceDir = sourceDir;
     }
 
-    public String getJvmArgs() {
+    @Input
+    // @InputDirectory this breaks kotlin projects, the working dir at this stage will be evaluated to 'classes/java/main' instead of 'classes/kotlin/main'
+    public String getWorkingDir() {
+        if (workingDir == null) {
+            return extension().workingDir().toString();
+        } else {
+            return workingDir;
+        }
+    }
+
+    @Option(description = "Set working directory", option = "working-dir")
+    public void setWorkingDir(String workingDir) {
+        this.workingDir = workingDir;
+    }
+
+    @Optional
+    @Input
+    public List<String> getJvmArgs() {
         return jvmArgs;
     }
 
-    @Option(description = "Set debug", option = "jvm-args")
-    @Optional
-    public void setJvmArgs(String jvmArgs) {
+    @Option(description = "Set JVM arguments", option = "jvm-args")
+    public void setJvmArgs(List<String> jvmArgs) {
         this.jvmArgs = jvmArgs;
     }
 
+    @Optional
+    @Input
+    public List<String> getArgs() {
+        return args;
+    }
+
+    public void setArgs(List<String> args) {
+        this.args = args;
+    }
+
+    @Option(description = "Set application arguments", option = "quarkus-args")
+    public void setArgsString(String argsString) {
+        this.setArgs(Arrays.asList(Commandline.translateCommandline(argsString)));
+    }
+
+    @Input
     public boolean isPreventnoverify() {
         return preventnoverify;
     }
@@ -121,170 +160,50 @@ public class QuarkusDev extends QuarkusTask {
     @Option(description = "value is intended to be set to true when some generated bytecode is" +
             " erroneous causing the JVM to crash when the verify:none option is set " +
             "(which is on by default)", option = "prevent-noverify")
-    @Optional
     public void setPreventnoverify(boolean preventnoverify) {
         this.preventnoverify = preventnoverify;
     }
 
+    @Optional
+    @Input
+    public List<String> getCompilerArgs() {
+        return compilerArgs;
+    }
+
+    @Option(description = "Additional parameters to pass to javac when recompiling changed source files", option = "compiler-args")
+    public void setCompilerArgs(List<String> compilerArgs) {
+        this.compilerArgs = compilerArgs;
+    }
+
     @TaskAction
     public void startDev() {
-
-        QuarkusPluginExtension extension = (QuarkusPluginExtension) getProject().getExtensions().findByName("quarkus");
-
         if (!getSourceDir().isDirectory()) {
             throw new GradleException("The `src/main/java` directory is required, please create it.");
         }
 
-        if (!getBuildDir().isDirectory() ||
-                !new File(getBuildDir(), "classes").isDirectory()) {
+        if (!extension().outputDirectory().isDirectory()) {
             throw new GradleException("The project has no output yet, " +
                     "this should not happen as build should have been executed first. " +
-                    "Do the project have any source files?");
+                    "Does the project have any source files?");
         }
 
         try {
-            List<String> args = new ArrayList<>();
-            args.add("java");
-            if (getDebug() == null) {
-                // debug mode not specified
-                // make sure 5005 is not used, we don't want to just fail if something else is using it
-                try (Socket socket = new Socket(InetAddress.getByAddress(new byte[] { 127, 0, 0, 1 }), 5005)) {
-                    System.err.println("Port 5005 in use, not starting in debug mode");
-                } catch (IOException e) {
-                    args.add("-Xdebug");
-                    args.add("-Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=n");
-                }
-            } else if (getDebug().toLowerCase().equals("client")) {
-                args.add("-Xdebug");
-                args.add("-Xrunjdwp:transport=dt_socket,address=localhost:5005,server=n,suspend=n");
-            } else if (getDebug().toLowerCase().equals("true")) {
-                args.add("-Xdebug");
-                args.add("-Xrunjdwp:transport=dt_socket,address=localhost:5005,server=y,suspend=y");
-            } else if (!getDebug().toLowerCase().equals("false")) {
-                try {
-                    int port = Integer.parseInt(getDebug());
-                    if (port <= 0) {
-                        throw new GradleException("The specified debug port must be greater than 0");
-                    }
-                    args.add("-Xdebug");
-                    args.add("-Xrunjdwp:transport=dt_socket,address=" + port + ",server=y,suspend=y");
-                } catch (NumberFormatException e) {
-                    throw new GradleException(
-                            "Invalid value for debug parameter: " + getDebug() + " must be true|false|client|{port}");
-                }
-            }
-            if (getJvmArgs() != null) {
-                args.addAll(Arrays.asList(getJvmArgs().split(" ")));
-            }
-
-            for (File f : extension.resourcesDir()) {
-                File servletRes = new File(f, "META-INF/resources");
-                if (servletRes.exists()) {
-                    args.add("-D" + RESOURCES_PROP + "=" + servletRes.getAbsolutePath());
-                    System.out.println("Using servlet resources " + servletRes.getAbsolutePath());
-                    break;
-                }
-            }
-
-            // the following flags reduce startup time and are acceptable only for dev purposes
-            args.add("-XX:TieredStopAtLevel=1");
-            if (!isPreventnoverify()) {
-                args.add("-Xverify:none");
-            }
-
-            //build a class-path string for the base platform
-            //this stuff does not change
-            // Do not include URIs in the manifest, because some JVMs do not like that
-            StringBuilder classPathManifest = new StringBuilder();
-            StringBuilder classPath = new StringBuilder();
-            for (File f : extension.dependencyFiles()) {
-                addToClassPaths(classPathManifest, classPath, f);
-            }
-            args.add("-Djava.util.logging.manager=org.jboss.logmanager.LogManager");
-            File wiringClassesDirectory = new File(getBuildDir(), "wiring-classes");
-            wiringClassesDirectory.mkdirs();
-
-            addToClassPaths(classPathManifest, classPath, wiringClassesDirectory);
-
-            //we also want to add the maven plugin jar to the class path
-            //this allows us to just directly use classes, without messing around copying them
-            //to the runner jar
-            URL classFile = DevModeMain.class.getClassLoader()
-                    .getResource(DevModeMain.class.getName().replace('.', '/') + ".class");
-            File path;
-            if (classFile.getProtocol().equals("jar")) {
-                String jarPath = classFile.getPath().substring(0, classFile.getPath().lastIndexOf('!'));
-                if (jarPath.startsWith("file:"))
-                    jarPath = jarPath.substring(5);
-                path = new File(jarPath);
-            } else if (classFile.getProtocol().equals("file")) {
-                String filePath = classFile.getPath().substring(0,
-                        classFile.getPath().lastIndexOf(DevModeMain.class.getName().replace('.', '/')));
-                path = new File(filePath);
+            QuarkusDevModeLauncher runner = newLauncher();
+            String outputFile = System.getProperty(IO_QUARKUS_DEVMODE_ARGS);
+            if (outputFile == null) {
+                getProject().exec(action -> {
+                    action.commandLine(runner.args()).workingDir(getWorkingDir());
+                    action.setStandardInput(System.in)
+                            .setErrorOutput(System.out)
+                            .setStandardOutput(System.out);
+                });
             } else {
-                throw new GradleException("Unsupported DevModeMain artifact URL:" + classFile);
-            }
-            addToClassPaths(classPathManifest, classPath, path);
-
-            //now we need to build a temporary jar to actually run
-
-            File tempFile = new File(getBuildDir(), extension.finalName() + "-dev.jar");
-            tempFile.delete();
-            tempFile.deleteOnExit();
-
-            try (ZipOutputStream out = new ZipOutputStream(new FileOutputStream(tempFile))) {
-                out.putNextEntry(new ZipEntry("META-INF/"));
-                Manifest manifest = new Manifest();
-                manifest.getMainAttributes().put(Attributes.Name.MANIFEST_VERSION, "1.0");
-                manifest.getMainAttributes().put(Attributes.Name.CLASS_PATH, classPathManifest.toString());
-                manifest.getMainAttributes().put(Attributes.Name.MAIN_CLASS, DevModeMain.class.getName());
-                out.putNextEntry(new ZipEntry("META-INF/MANIFEST.MF"));
-                manifest.write(out);
-
-                out.putNextEntry(new ZipEntry(ClassLoaderCompiler.DEV_MODE_CLASS_PATH));
-                out.write(classPath.toString().getBytes(StandardCharsets.UTF_8));
-            }
-            StringBuilder resources = new StringBuilder();
-            for (File file : extension.resourcesDir()) {
-                if (resources.length() > 0)
-                    resources.append(File.pathSeparator);
-                resources.append(file.getAbsolutePath());
-            }
-
-            extension.outputDirectory().mkdirs();
-
-            args.add("-Dquarkus.runner.classes=" + extension.outputDirectory().getAbsolutePath());
-            args.add("-Dquarkus.runner.sources=" + getSourceDir().getAbsolutePath());
-            if (resources != null) {
-                args.add("-Dquarkus.runner.resources=" + resources.toString());
-            }
-            args.add("-jar");
-            args.add(tempFile.getAbsolutePath());
-            args.add(extension.outputDirectory().getAbsolutePath());
-            args.add(wiringClassesDirectory.getAbsolutePath());
-            args.add(new File(getBuildDir(), "transformer-cache").getAbsolutePath());
-            ProcessBuilder pb = new ProcessBuilder(args.toArray(new String[0]));
-            pb.redirectError(ProcessBuilder.Redirect.INHERIT);
-            pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
-            pb.redirectInput(ProcessBuilder.Redirect.INHERIT);
-            pb.directory(extension.outputDirectory());
-            System.out.println("Starting process: ");
-            pb.command().forEach(System.out::println);
-            System.out.println("Args: ");
-            args.forEach(System.out::println);
-            Process p = pb.start();
-
-            Runtime.getRuntime().addShutdownHook(new Thread(new Runnable() {
-                @Override
-                public void run() {
-                    p.destroy();
+                try (BufferedWriter is = Files.newBufferedWriter(Paths.get(outputFile))) {
+                    for (String i : runner.args()) {
+                        is.write(i);
+                        is.newLine();
+                    }
                 }
-            }, "Development Mode Shutdown Hook"));
-            try {
-                p.waitFor();
-            } catch (Exception e) {
-                p.destroy();
-                throw e;
             }
 
         } catch (Exception e) {
@@ -292,17 +211,364 @@ public class QuarkusDev extends QuarkusTask {
         }
     }
 
-    private void addToClassPaths(StringBuilder classPathManifest, StringBuilder classPath, File file)
-            throws MalformedURLException {
-        URI uri = file.toPath().toAbsolutePath().toUri();
-        classPathManifest.append(uri.getPath());
-        classPath.append(uri.toURL().toString());
-        if (file.isDirectory()) {
-            classPathManifest.append("/");
-            classPath.append("/");
+    private QuarkusDevModeLauncher newLauncher() throws Exception {
+        final Project project = getProject();
+
+        String java = null;
+
+        if (GradleVersion.current().compareTo(GradleVersion.version("6.7")) >= 0) {
+            JavaToolchainService toolChainService = project.getExtensions().getByType(JavaToolchainService.class);
+            JavaToolchainSpec toolchainSpec = project.getExtensions().getByType(JavaPluginExtension.class).getToolchain();
+            Provider<JavaLauncher> javaLauncher = toolChainService.launcherFor(toolchainSpec);
+            if (javaLauncher.isPresent()) {
+                java = javaLauncher.get().getExecutablePath().getAsFile().getAbsolutePath();
+            }
         }
-        classPathManifest.append(" ");
-        classPath.append(" ");
+        GradleDevModeLauncher.Builder builder = GradleDevModeLauncher.builder(getLogger(), java)
+                .preventnoverify(isPreventnoverify())
+                .projectDir(project.getProjectDir())
+                .buildDir(getBuildDir())
+                .outputDir(getBuildDir())
+                .debug(System.getProperty("debug"))
+                .debugHost(System.getProperty("debugHost"))
+                .debugPort(System.getProperty("debugPort"))
+                .suspend(System.getProperty("suspend"));
+        if (System.getProperty(IO_QUARKUS_DEVMODE_ARGS) == null) {
+            builder.jvmArgs("-Dquarkus.test.basic-console=true")
+                    .jvmArgs("-Dio.quarkus.force-color-support=true");
+        }
+
+        if (getJvmArgs() != null) {
+            builder.jvmArgs(getJvmArgs());
+        }
+
+        for (Map.Entry<String, ?> e : project.getProperties().entrySet()) {
+            if (e.getValue() instanceof String) {
+                builder.buildSystemProperty(e.getKey(), e.getValue().toString());
+            }
+        }
+
+        //  this is a minor hack to allow ApplicationConfig to be populated with defaults
+        builder.applicationName(project.getName());
+        if (project.getVersion() != null) {
+            builder.applicationVersion(project.getVersion().toString());
+
+        }
+
+        builder.sourceEncoding(getSourceEncoding());
+
+        final AppModel appModel;
+        final AppModelResolver modelResolver = extension().getAppModelResolver(LaunchMode.DEVELOPMENT);
+        try {
+            final AppArtifact appArtifact = extension().getAppArtifact();
+            appArtifact.setPaths(QuarkusGradleUtils.getOutputPaths(project));
+            appModel = modelResolver.resolveModel(appArtifact);
+        } catch (AppModelResolverException e) {
+            throw new GradleException("Failed to resolve application model " + extension().getAppArtifact() + " dependencies",
+                    e);
+        }
+
+        final Set<AppArtifactKey> projectDependencies = new HashSet<>();
+        addSelfWithLocalDeps(project, builder, new HashSet<>(), projectDependencies, true);
+
+        for (AppDependency appDependency : appModel.getFullDeploymentDeps()) {
+            final AppArtifact appArtifact = appDependency.getArtifact();
+            //we only use the launcher for launching from the IDE, we need to exclude it
+            if (appArtifact.getGroupId().equals("io.quarkus") && appArtifact.getGroupId().equals("quarkus-ide-launcher")) {
+                continue;
+            }
+            if (!projectDependencies.contains(new AppArtifactKey(appArtifact.getGroupId(), appArtifact.getArtifactId()))) {
+                appArtifact.getPaths().forEach(p -> {
+                    if (Files.exists(p)) {
+                        if (appArtifact.getGroupId().equals("io.quarkus")
+                                && appArtifact.getArtifactId().equals("quarkus-class-change-agent")) {
+                            builder.jvmArgs("-javaagent:" + p.toFile().getAbsolutePath());
+                        } else {
+                            addToClassPaths(builder, p.toFile());
+                        }
+                    }
+
+                });
+            }
+        }
+
+        //we also want to add the Gradle plugin to the class path
+        //this allows us to just directly use classes, without messing around copying them
+        //to the runner jar
+        addGradlePluginDeps(builder);
+
+        JavaPluginConvention javaPluginConvention = project.getConvention().findPlugin(JavaPluginConvention.class);
+        if (javaPluginConvention != null) {
+            builder.sourceJavaVersion(javaPluginConvention.getSourceCompatibility().toString());
+            builder.targetJavaVersion(javaPluginConvention.getTargetCompatibility().toString());
+        }
+
+        if (getCompilerArgs().isEmpty()) {
+            getJavaCompileTask()
+                    .map(compileTask -> compileTask.getOptions().getCompilerArgs())
+                    .ifPresent(builder::compilerOptions);
+        } else {
+            builder.compilerOptions(getCompilerArgs());
+        }
+
+        modifyDevModeContext(builder);
+
+        final Path serializedModel = QuarkusGradleUtils.serializeAppModel(appModel, this, false);
+        serializedModel.toFile().deleteOnExit();
+        builder.jvmArgs("-D" + BootstrapConstants.SERIALIZED_APP_MODEL + "=" + serializedModel.toAbsolutePath());
+
+        if (builder.isTestsPresent()) {
+            final AppModel testAppModel;
+            final AppModelResolver testModelResolver = extension().getAppModelResolver(LaunchMode.TEST);
+            try {
+                final AppArtifact appArtifact = extension().getAppArtifact();
+                appArtifact.setPaths(QuarkusGradleUtils.getOutputPaths(project));
+                testAppModel = testModelResolver.resolveModel(appArtifact);
+            } catch (AppModelResolverException e) {
+                throw new GradleException(
+                        "Failed to resolve application model " + extension().getAppArtifact() + " dependencies",
+                        e);
+            }
+            final Path serializedTestModel = QuarkusGradleUtils.serializeAppModel(testAppModel, this, true);
+            serializedTestModel.toFile().deleteOnExit();
+            builder.jvmArgs("-D" + BootstrapConstants.SERIALIZED_TEST_APP_MODEL + "=" + serializedTestModel.toAbsolutePath());
+        }
+        extension().outputDirectory().mkdirs();
+
+        if (!args.isEmpty()) {
+            builder.applicationArgs(String.join(" ", args));
+        }
+
+        return builder.build();
     }
 
+    protected void modifyDevModeContext(GradleDevModeLauncher.Builder builder) {
+
+    }
+
+    private void addSelfWithLocalDeps(Project project, GradleDevModeLauncher.Builder builder, Set<String> visited,
+            Set<AppArtifactKey> addedDeps, boolean root) {
+        if (!visited.add(project.getPath())) {
+            return;
+        }
+        final Configuration compileCp = project.getConfigurations().findByName(QuarkusPlugin.DEV_MODE_CONFIGURATION_NAME);
+        if (compileCp != null) {
+            compileCp.getIncoming().getDependencies().forEach(d -> {
+                if (d instanceof ProjectDependency) {
+                    addSelfWithLocalDeps(((ProjectDependency) d).getDependencyProject(), builder, visited, addedDeps, false);
+                }
+            });
+        }
+
+        addLocalProject(project, builder, addedDeps, root);
+    }
+
+    private void addLocalProject(Project project, GradleDevModeLauncher.Builder builder, Set<AppArtifactKey> addeDeps,
+            boolean root) {
+        final AppArtifactKey key = new AppArtifactKey(project.getGroup().toString(), project.getName());
+        if (addeDeps.contains(key)) {
+            return;
+        }
+        final JavaPluginConvention javaConvention = project.getConvention().findPlugin(JavaPluginConvention.class);
+        if (javaConvention == null) {
+            return;
+        }
+
+        SourceSetContainer sourceSets = javaConvention.getSourceSets();
+        SourceSet mainSourceSet = sourceSets.findByName(SourceSet.MAIN_SOURCE_SET_NAME);
+        if (mainSourceSet == null) {
+            return;
+        }
+        Set<Path> sourcePaths = new LinkedHashSet<>();
+        Set<Path> sourceParentPaths = new LinkedHashSet<>();
+
+        for (File sourceDir : mainSourceSet.getAllJava().getSrcDirs()) {
+            if (sourceDir.exists()) {
+                sourcePaths.add(sourceDir.toPath().toAbsolutePath());
+                sourceParentPaths.add(sourceDir.toPath().getParent().toAbsolutePath());
+            }
+        }
+        final Set<Path> resourcesSrcDirs = new LinkedHashSet<>();
+        for (File resourcesSrcDir : mainSourceSet.getResources().getSourceDirectories().getFiles()) {
+            resourcesSrcDirs.add(resourcesSrcDir.toPath().toAbsolutePath());
+        }
+        // resourcesSrcDir may exist but if it's empty the resources output dir won't be created
+        final File resourcesOutputDir = mainSourceSet.getOutput().getResourcesDir();
+
+        if (sourcePaths.isEmpty() && !resourcesOutputDir.exists()) {
+            return;
+        }
+
+        String classesDir = QuarkusGradleUtils.getClassesDir(mainSourceSet, project.getBuildDir(), false);
+        if (classesDir == null) {
+            return;
+        } else {
+            File classesDirFile = new File(classesDir);
+            if (!classesDirFile.exists()) {
+                return;
+            }
+        }
+
+        final String resourcesOutputPath;
+        if (resourcesOutputDir.exists()) {
+            resourcesOutputPath = resourcesOutputDir.getAbsolutePath();
+            if (!Files.exists(Paths.get(classesDir))) {
+                // currently classesDir can't be null and is expected to exist
+                classesDir = resourcesOutputPath;
+            }
+        } else {
+            // currently resources dir should exist
+            resourcesOutputPath = classesDir;
+        }
+
+        DevModeContext.ModuleInfo.Builder moduleBuilder = new DevModeContext.ModuleInfo.Builder().setAppArtifactKey(key)
+                .setName(project.getName())
+                .setProjectDirectory(project.getProjectDir().getAbsolutePath())
+                .setSourcePaths(PathsCollection.from(sourcePaths))
+                .setClassesPath(classesDir)
+                .setResourcePaths(PathsCollection.from(resourcesSrcDirs))
+                .setResourcesOutputPath(resourcesOutputPath)
+                .setSourceParents(PathsCollection.from(sourceParentPaths))
+                .setPreBuildOutputDir(project.getBuildDir().toPath().resolve("generated-sources").toAbsolutePath().toString())
+                .setTargetDir(project.getBuildDir().toString());
+
+        SourceSet testSourceSet = sourceSets.findByName(SourceSet.TEST_SOURCE_SET_NAME);
+        if (testSourceSet != null) {
+
+            Set<Path> testSourcePaths = new LinkedHashSet<>();
+            Set<Path> testSourceParentPaths = new LinkedHashSet<>();
+
+            for (File sourceDir : testSourceSet.getAllJava().getSrcDirs()) {
+                if (sourceDir.exists()) {
+                    testSourcePaths.add(sourceDir.toPath().toAbsolutePath());
+                    testSourceParentPaths.add(sourceDir.toPath().getParent().toAbsolutePath());
+                }
+            }
+            final Set<Path> testResourcesSrcDirs = new LinkedHashSet<>();
+            for (File testResourcesSrcDir : testSourceSet.getResources().getSourceDirectories().getFiles()) {
+                testResourcesSrcDirs.add(testResourcesSrcDir.toPath().toAbsolutePath());
+            }
+            // resourcesSrcDir may exist but if it's empty the resources output dir won't be created
+            final File testResourcesOutputDir = testSourceSet.getOutput().getResourcesDir();
+
+            if (!testSourcePaths.isEmpty() || (testResourcesOutputDir != null && testResourcesOutputDir.exists())) {
+                String testClassesDir = QuarkusGradleUtils.getClassesDir(testSourceSet, project.getBuildDir(), true);
+                if (testClassesDir != null) {
+                    File testClassesDirFile = new File(testClassesDir);
+                    if (testClassesDirFile.exists()) {
+                        final String testResourcesOutputPath;
+                        if (testResourcesOutputDir.exists()) {
+                            testResourcesOutputPath = testResourcesOutputDir.getAbsolutePath();
+                            if (!Files.exists(Paths.get(testClassesDir))) {
+                                // currently classesDir can't be null and is expected to exist
+                                testClassesDir = testResourcesOutputPath;
+                            }
+                        } else {
+                            // currently resources dir should exist
+                            testResourcesOutputPath = testClassesDir;
+                        }
+                        moduleBuilder.setTestSourcePaths(PathsCollection.from(testSourcePaths))
+                                .setTestClassesPath(testClassesDir)
+                                .setTestResourcePaths(PathsCollection.from(testResourcesSrcDirs))
+                                .setTestResourcesOutputPath(testResourcesOutputPath);
+                    }
+                }
+            }
+        }
+        DevModeContext.ModuleInfo wsModuleInfo = moduleBuilder
+                .build();
+
+        if (root) {
+            builder.mainModule(wsModuleInfo);
+        } else {
+            builder.dependency(wsModuleInfo);
+        }
+        addeDeps.add(key);
+    }
+
+    private String getSourceEncoding() {
+        return getJavaCompileTask()
+                .map(javaCompile -> javaCompile.getOptions().getEncoding())
+                .orElse(null);
+    }
+
+    private java.util.Optional<JavaCompile> getJavaCompileTask() {
+        return java.util.Optional
+                .ofNullable((JavaCompile) getProject().getTasks().getByName(JavaPlugin.COMPILE_JAVA_TASK_NAME));
+    }
+
+    private ResolvedDependency findQuarkusPluginDependency(Set<ResolvedDependency> dependencies) {
+        for (ResolvedDependency rd : dependencies) {
+            if ("io.quarkus.gradle.plugin".equals(rd.getModuleName())) {
+                return rd;
+            } else {
+                Set<ResolvedDependency> children = rd.getChildren();
+                if (children != null) {
+                    ResolvedDependency quarkusPluginDependency = findQuarkusPluginDependency(children);
+                    if (quarkusPluginDependency != null) {
+                        return quarkusPluginDependency;
+                    }
+                }
+            }
+        }
+        return null;
+    }
+
+    private void addGradlePluginDeps(GradleDevModeLauncher.Builder builder) {
+        boolean foundQuarkusPlugin = false;
+        Project prj = getProject();
+        while (prj != null && !foundQuarkusPlugin) {
+            final Set<ResolvedDependency> firstLevelDeps = prj.getBuildscript().getConfigurations().getByName("classpath")
+                    .getResolvedConfiguration().getFirstLevelModuleDependencies();
+
+            if (firstLevelDeps.isEmpty()) {
+                // TODO this looks weird
+            } else {
+                ResolvedDependency quarkusPluginDependency = findQuarkusPluginDependency(firstLevelDeps);
+                if (quarkusPluginDependency != null) {
+                    quarkusPluginDependency.getAllModuleArtifacts().stream()
+                            .map(ResolvedArtifact::getFile)
+                            .forEach(f -> addToClassPaths(builder, f));
+
+                    foundQuarkusPlugin = true;
+
+                    break;
+                }
+            }
+            prj = prj.getParent();
+        }
+        if (!foundQuarkusPlugin) {
+            // that's weird, the project may include the plugin but not have it on its classpath
+            // this may happen when running the plugin's tests
+            // so here we check the property set in the Quarkus functional tests
+            final String pluginUnderTestMetaData = System.getProperty("plugin-under-test-metadata.properties");
+            if (pluginUnderTestMetaData != null) {
+                final Path p = Paths.get(pluginUnderTestMetaData);
+                if (Files.exists(p)) {
+                    final Properties props = new Properties();
+                    try (InputStream is = Files.newInputStream(p)) {
+                        props.load(is);
+                    } catch (IOException e) {
+                        throw new IllegalStateException("Failed to read " + p, e);
+                    }
+                    final String classpath = props.getProperty("implementation-classpath");
+                    for (String cpElement : classpath.split(File.pathSeparator)) {
+                        final File f = new File(cpElement);
+                        if (f.exists()) {
+                            addToClassPaths(builder, f);
+                        }
+                    }
+                }
+            } else {
+                throw new IllegalStateException("Unable to find quarkus-gradle-plugin dependency in " + getProject());
+            }
+        }
+    }
+
+    private void addToClassPaths(GradleDevModeLauncher.Builder classPathManifest, File file) {
+        if (filesIncludedInClasspath.add(file)) {
+            getProject().getLogger().debug("Adding dependency {}", file);
+            classPathManifest.classpathEntry(file);
+        }
+    }
 }
